k8s/inventory/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  labels:
    app: inventory
spec:
  selector:
    app: inventory
  ports:
    - name: grpc
      port: 9001
      protocol: TCP
      targetPort: 9001
