k8s/inventory/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations: 
    nginx.ingress.kubernetes.io/backend-protocol: GRPC
  name: inventory
spec:
  ingressClassName: nginx
  rules:
    - host: ingress.inventory.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory
                port:
                  number: 9001
